--- a/index.html
+++ b/index.html
@@ -4,27 +4,162 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>figma.com</title>
+    <title>Challenge 7</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="screen.css">
   </head>
   <body>
-    <h1 id = "hero">Name</h1>
-
-    <h1 id = "intro">Name is a UX Designer with a passion for large text and small file sizes.</h1>
-
-    <div class ="card">
-      <img 
-      src="figma-comp.png" 
-      alt="Image of website"
-      width="360"
-      height="256"
-      >
-      <div>
-        <h2>Level 2 Heading</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>  
+    <nav class="navbar navbar-expand-lg navbar-light bs-body-bg ">
+      <div class="container-fluid">
+        <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+         Popular
+        </button>
+        <ul class="dropdown-menu">
+          <li><a class="dropdown-item" href="#">Popular</a></li>
+          <li><a class="dropdown-item" href="#">New & Noteworthy</a></li>
+        </ul>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0 nav-pills">
+            <li class="nav-item">
+              <a class="nav-link active rounded-pill" aria-current="page" href="#">Discover</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link rounded-pill" href="#">Animation</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link rounded-pill" href="#">Branding</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link rounded-pill" href="#">Illustration</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link rounded-pill" href="#">Mobile</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link rounded-pill" href="#">Print</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#"><i class="fa-solid fa-chevron-right"></i></a>
+            </li>
+          </ul>
+          <p class="d-inline-flex gap-1">
+            <button class="btn btn-outline-secondary rounded-pill" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+              <i class="fa-solid fa-filter"></i> Filters
+            </button>
+          </p>
+        </div>
       </div>
-     </div>
+    </nav>
+
+    <div class="container text-center">
+      <div class="row row-cols-3">
+        <div class="col">
+          <div class="card border-0" style="width: 400px;">
+            <img src="/dribbble/dribble1.gif" class="card-img-top" alt="gif of dribble1">
+            <div class="card-body">
+              <div class="left-side">
+                <img class="profilepics" src="profilepics/sm_logo.png" alt="Siege Media logo">
+                <p class="name">Siege Media<span class="card-text badge text-bg-secondary">Team</span></p> 
+              </div>
+              <ul class="interactions">
+                <li><i class="fa-solid fa-heart"></i></li>
+                <li><p class="likes">193</p></li>
+                <li><i class="fa-solid fa-eye"></i></li>
+                 <li><p class="views">67.4k</p></li>
+              </ul>              
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card border-0" style="width: 400px;">
+            <img src="/dribbble/dribbble2.png" class="card-img-top" alt="gif of dribble2">
+            <div class="card-body">
+              <div class="left-side">
+                <img class="profilepics" src="profilepics/oc_logo.jpg" alt="Orman Clark profile picture">
+                <p class="name">Orman Clark<span class="card-text badge text-bg-secondary">Pro</span></p> 
+              </div>
+              <ul class="interactions">
+                <li><i class="fa-solid fa-heart"></i></li>
+                <li><p class="likes">98</p></li>
+                <li><i class="fa-solid fa-eye"></i></li>
+                 <li><p class="views">24.2k</p></li>
+              </ul>              
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card border-0" style="width: 400px;">
+            <img src="/dribbble/dribbble3.png" class="card-img-top" alt="gif of dribble3">
+            <div class="card-body">
+              <div class="left-side">
+                <img class="profilepics" src="profilepics/jc_logo.png" alt="Jordon Cheung profile picture">
+                <p class="name">Jordon Cheung<span class="card-text badge text-bg-secondary"></span></p> 
+              </div>
+              <ul class="interactions">
+                <li><i class="fa-solid fa-heart"></i></li>
+                <li><p class="likes">176</p></li>
+                <li><i class="fa-solid fa-eye"></i></li>
+                 <li><p class="views">57.1k</p></li>
+              </ul>              
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row row-cols-3">
+        <div class="col">
+          <div class="card border-0" style="width: 400px;">
+            <img src="/dribbble/dribbble4.png" class="card-img-top" alt="gif of dribbble4">
+            <div class="card-body">
+              <div class="left-side">
+                <img class="profilepics" src="profilepics/ac_logo.png" alt="Aldo Crusher profile picture">
+                <p class="name">Aldo Crusher<span class="card-text badge text-bg-secondary">Pro</span></p> 
+              </div>
+              <ul class="interactions">
+                <li><i class="fa-solid fa-heart"></i></li>
+                <li><p class="likes">65</p></li>
+                <li><i class="fa-solid fa-eye"></i></li>
+                 <li><p class="views">6.7k</p></li>
+              </ul>              
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card border-0" style="width: 400px;">
+            <img src="/dribbble/dribbble5.png" class="card-img-top" alt="gif of dribble5">
+            <div class="card-body">
+              <div class="left-side">
+                <img class="profilepics" src="profilepics/canto_logo.png" alt="Canto advertisment">
+                <p class="name">Canto<span class="card-text badge text-bg-secondary"></span></p> 
+              </div>
+              <ul class="ads">
+                <li><p>Hide ads</p></li>
+                <li><p>•</p></li>
+                <li><p>Advertise</p></li>
+              </ul>              
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card border-0" style="width: 400px;">
+            <img src="/dribbble/dribbble6.png" class="card-img-top" alt="gif of dribbble6">
+            <div class="card-body">
+              <div class="left-side">
+                <img class="profilepics" src="profilepics/rw-logo.jpg" alt="Ramy Wafaa profile picture">
+                <p class="name">Ramy Wafaa<span class="card-text badge text-bg-secondary">Pro</span></p> 
+              </div>
+              <ul class="interactions">
+                <li><i class="fa-solid fa-heart"></i></li>
+                <li><p class="likes">513</p></li>
+                <li><i class="fa-solid fa-eye"></i></li>
+                 <li><p class="views">143k</p></li>
+              </ul>              
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     
-    <script src="index.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
